fix the gap between the header and the content page

--- a/hw3/hw3.css
+++ b/hw3/hw3.css
@@ -8,15 +8,14 @@
 	background: url("image/bar.png");
 	width: 680px;
 	height: 57px;
-	
 }
 
 .bar .container div{
-	font-family: arial;
+	font-family: Arial;
 	font-weight: bold;
 	font-size: 15px;
 	display: inline-block;
-	width: 100px;
+	width: 90px;
 	padding: 15px;
 	text-align: center;
 }
@@ -32,26 +31,14 @@
 
 .content_page {
 	background-color: #869c80;
+	font-family: Arial;
 	width: 680px;
 	height: 472px;
 }
 
-.header .container {
-	padding-top: 1px;
-	padding-left: 25px;
-}
-
-.content_page .container {
-	font-family: Arial;
-}
-
 .content_page h2{
-	font-family: Arial;
+	margin: 0px;
+	padding: 0px;
 	color: #2c4969;
-	margin: 20px;
 }
 
-.content_page p{
-	font-size: 12px;
-	margin: 20px;
-}
